--- a/SampleApp/app/src/main/AndroidManifest.xml
+++ b/SampleApp/app/src/main/AndroidManifest.xml
@@ -34,7 +34,6 @@
         <activity
             android:name="com.example.demo.PermissionActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:theme="@style/Theme.Demo">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -45,14 +44,12 @@
         <activity
             android:name="com.example.demo.MainActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
         <activity
-            android:name="com.example.demo.JoinRoomActivity"
+            android:name="com.example.demo.JoinKYCRoomActivity"
             android:exported="true"
-            android:label="@string/app_name"
             android:screenOrientation="portrait"
             android:windowSoftInputMode="adjustResize" />
 
